feat:增加文案说明

--- a/src/styles/atom.scss
+++ b/src/styles/atom.scss
@@ -36,7 +36,9 @@ $colors: (
 
 $fonts: (
         12: 12px,
-        14: 14px
+        14: 14px,
+        20: 20px,
+        40: 40px
 );
 @each $type in map-keys($fonts) {
   .font-#{$type} {
